# appointment_plan_api_cl

./: create_admin.py  main.py  pyproject.toml  seed.py
.serena/: project.yml
.serena/memories/: code_style_conventions.md  development_guidelines.md  project_overview.md  project_structure.md  suggested_commands.md  tech_stack.md
api/: __init__.py  web_routes.py
api/auth/: __init__.py  cookie_auth.py  dependencies.py  roles.py
api/exceptions/: __init__.py
api/middleware/: debug_route.py  error_handler.py
api/models/: __init__.py  schemas.py
api/routes/: __init__.py  appointments.py  auth.py  locations.py  planning.py  plans.py  web.py  web_auth.py
api/routes/not_used/: auth.py  web.py
api/routes/web/: __init__.py
api/routes/web/calendar/: calendar.py  locations.py  persons.py  plans.py  search.py
api/services/: __init__.py  appointment_service.py  calendar_service.py  person_service.py  plan_service.py
api/utils/: __init__.py  converters.py
database/: db_setup.py
database/models/: __init__.py  entities.py
static/css/: styles.css
static/js/: colorUtils.js
templates/: appointment_detail_modal.html  base.html  calendar_partial.html  day_view_modal.html  index.html  landing_page.html  location_detail.html  locations.html  login_modal.html  person_detail.html  persons.html  plan_detail.html  plans.html  search_results.html
templates/menus/: calendar.html  calendar_mobile.html
